# rag-to-riches

./: pyproject.toml
01_rag_evals/: module1.ipynb
02_query_understanding/: 01_ecommerce_domain.ipynb  02_apollo_query_understanding.ipynb  03_financial_products.ipynb
