[project]
name = "rag-to-riches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=5.12.0",
    "langchain>=0.3.9",
    "langchain-openai>=0.2.10",
    "ragas>=0.2.6",
    "jupyter>=1.1.1",
    "openinference-instrumentation-langchain>=0.1.29",
    "opentelemetry-sdk>=1.28.2",
    "opentelemetry-exporter-otlp>=1.28.2",
    "python-dotenv>=1.0.1",
]
